force-app/main/default/objects/Vidrala_Vidrala__c/Vidrala_Vidrala__c.object-meta.xml
<CustomObject>
    <label>Vidrala Customer Survey</label>
    <nameField>
        <displayFormat>VSR-{00000}</displayFormat>
        <label>Vidrala Survey Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vidrala Customer Surveys</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>