force-app/main/default/objects/Vidrala_Vidrala__c/fields/Account_Manager_score__c.field-meta.xml
<CustomField>
    <fullName>Account_Manager_score__c</fullName>
    <label>Account Manager Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>