force-app/main/default/objects/Vidrala_Vidrala__c/fields/Attitude__c.field-meta.xml
<CustomField>
    <fullName>Attitude__c</fullName>
    <label>Attitude</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>