force-app/main/default/objects/Vidrala_Vidrala__c/fields/Aware_of_Encirc_s_SustainabilityStrategy__c.field-meta.xml
<CustomField>
    <fullName>Aware_of_Encirc_s_SustainabilityStrategy__c</fullName>
    <label>Aware of Encirc&apos;s SustainabilityStrategy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>