force-app/main/default/objects/Vidrala_Vidrala__c/fields/Business_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Business_Requirements__c</fullName>
    <label>Business Requirements</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>