force-app/main/default/objects/Vidrala_Vidrala__c/fields/Cleaning_Practices__c.field-meta.xml
<CustomField>
    <fullName>Cleaning_Practices__c</fullName>
    <formula>NOT(ISBLANK(Cleaning_Text__c))</formula>
    <label>Cleaning Practices</label>
    <type>Checkbox</type>
</CustomField>