force-app/main/default/objects/Vidrala_Vidrala__c/fields/Cleaning_Text__c.field-meta.xml
<CustomField>
    <fullName>Cleaning_Text__c</fullName>
    <label>Cleaning Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>