force-app/main/default/objects/Vidrala_Vidrala__c/fields/Comp_2_Logistics__c.field-meta.xml
<CustomField>
    <fullName>Comp_2_Logistics__c</fullName>
    <label>Competitor 2 Logistics</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>