force-app/main/default/objects/Vidrala_Vidrala__c/fields/Comp_Customer_Service__c.field-meta.xml
<CustomField>
    <fullName>Comp_Customer_Service__c</fullName>
    <label>Competitor Customer Service</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>