force-app/main/default/objects/Vidrala_Vidrala__c/fields/Comp_Logistics__c.field-meta.xml
<CustomField>
    <fullName>Comp_Logistics__c</fullName>
    <label>Competitor Logistics</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>