force-app/main/default/objects/Vidrala_Vidrala__c/fields/Comp_Other__c.field-meta.xml
<CustomField>
    <fullName>Comp_Other__c</fullName>
    <label>Competitor Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>