force-app/main/default/objects/Vidrala_Vidrala__c/fields/Comp_Technical_Assistance__c.field-meta.xml
<CustomField>
    <fullName>Comp_Technical_Assistance__c</fullName>
    <label>Competitor Technical Assistance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>