force-app/main/default/objects/Vidrala_Vidrala__c/fields/Competitor_1_rate_them_versus_the_offeri__c.field-meta.xml
<CustomField>
    <fullName>Competitor_1_rate_them_versus_the_offeri__c</fullName>
    <label>Competitor 1</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>