force-app/main/default/objects/Vidrala_Vidrala__c/fields/Competitor_2_Other__c.field-meta.xml
<CustomField>
    <fullName>Competitor_2_Other__c</fullName>
    <label>Competitor 2 Other</label>
    <type>TextArea</type>
</CustomField>