force-app/main/default/objects/Vidrala_Vidrala__c/fields/Complaints__c.field-meta.xml
<CustomField>
    <fullName>Complaints__c</fullName>
    <label>Complaints</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>