force-app/main/default/objects/Vidrala_Vidrala__c/fields/Container_Weight__c.field-meta.xml
<CustomField>
    <fullName>Container_Weight__c</fullName>
    <formula>NOT(ISBLANK(Container_Weight_Text__c))</formula>
    <label>Container Weight</label>
    <type>Checkbox</type>
</CustomField>