force-app/main/default/objects/Vidrala_Vidrala__c/fields/Container_Weight_Text__c.field-meta.xml
<CustomField>
    <fullName>Container_Weight_Text__c</fullName>
    <label>Container Weight Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>