force-app/main/default/objects/Vidrala_Vidrala__c/fields/Corrective_Actions__c.field-meta.xml
<CustomField>
    <fullName>Corrective_Actions__c</fullName>
    <label>Corrective Actions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>