force-app/main/default/objects/Vidrala_Vidrala__c/fields/Customer_Exclusive_Designs__c.field-meta.xml
<CustomField>
    <fullName>Customer_Exclusive_Designs__c</fullName>
    <formula>NOT(ISBLANK(Designs_text__c))</formula>
    <label>Customer / Exclusive Designs</label>
    <type>Checkbox</type>
</CustomField>