force-app/main/default/objects/Vidrala_Vidrala__c/fields/Customer_Serv_Text__c.field-meta.xml
<CustomField>
    <fullName>Customer_Serv_Text__c</fullName>
    <label>Customer Serv. Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>