force-app/main/default/objects/Vidrala_Vidrala__c/fields/Customer_Service__c.field-meta.xml
<CustomField>
    <fullName>Customer_Service__c</fullName>
    <formula>NOT(ISBLANK(Customer_Serv_Text__c))</formula>
    <label>Customer Service</label>
    <type>Checkbox</type>
</CustomField>