force-app/main/default/objects/Vidrala_Vidrala__c/fields/Customer_Service_Team__c.field-meta.xml
<CustomField>
    <fullName>Customer_Service_Team__c</fullName>
    <label>Professional Customer Service Team</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>