force-app/main/default/objects/Vidrala_Vidrala__c/fields/Designs_text__c.field-meta.xml
<CustomField>
    <fullName>Designs_text__c</fullName>
    <label>Customer Exclusive Designs text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>