force-app/main/default/objects/Vidrala_Vidrala__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <inlineHelpText>Email the survey sent to</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>