force-app/main/default/objects/Vidrala_Vidrala__c/fields/Encirc_Sustainability_Commitment__c.field-meta.xml
<CustomField>
    <fullName>Encirc_Sustainability_Commitment__c</fullName>
    <label>Encirc Sustainability Commitment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>