force-app/main/default/objects/Vidrala_Vidrala__c/fields/Evaluate_another_competitor__c.field-meta.xml
<CustomField>
    <fullName>Evaluate_another_competitor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does the customer want to evaluate another competitor?</description>
    <label>Evaluate another competitor</label>
    <type>Checkbox</type>
</CustomField>