force-app/main/default/objects/Vidrala_Vidrala__c/fields/Food_Security_Management__c.field-meta.xml
<CustomField>
    <fullName>Food_Security_Management__c</fullName>
    <formula>NOT(ISBLANK(Food_Security_Text__c))</formula>
    <label>Food Security Management</label>
    <type>Checkbox</type>
</CustomField>