force-app/main/default/objects/Vidrala_Vidrala__c/fields/Food_Security_Text__c.field-meta.xml
<CustomField>
    <fullName>Food_Security_Text__c</fullName>
    <label>Food Security Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>