force-app/main/default/objects/Vidrala_Vidrala__c/fields/Foreign_Bodies_Control__c.field-meta.xml
<CustomField>
    <fullName>Foreign_Bodies_Control__c</fullName>
    <formula>NOT(ISBLANK(Foreign_Bodies_Text__c))</formula>
    <label>Foreign Bodies Control</label>
    <type>Checkbox</type>
</CustomField>