force-app/main/default/objects/Vidrala_Vidrala__c/fields/Foreign_Bodies_Text__c.field-meta.xml
<CustomField>
    <fullName>Foreign_Bodies_Text__c</fullName>
    <label>Foreign Bodies Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>