force-app/main/default/objects/Vidrala_Vidrala__c/fields/Glass_packaging_provided_by_ENCIRC__c.field-meta.xml
<CustomField>
    <fullName>Glass_packaging_provided_by_ENCIRC__c</fullName>
    <label>Glass Packaging Provided By Encirc</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Less than 25%</fullName>
            </value>
            <value>
                <fullName>26-50%</fullName>
            </value>
            <value>
                <fullName>51-75%</fullName>
            </value>
            <value>
                <fullName>More than 75%</fullName>
            </value>
            <value>
                <fullName>100%</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>