force-app/main/default/objects/Vidrala_Vidrala__c/fields/I_Don_t_Know__c.field-meta.xml
<CustomField>
    <fullName>I_Don_t_Know__c</fullName>
    <formula>NOT(ISBLANK(I_Dont_Know_Text__c))</formula>
    <label>I Don’t Know</label>
    <type>Checkbox</type>
</CustomField>