force-app/main/default/objects/Vidrala_Vidrala__c/fields/I_Dont_Know_Text__c.field-meta.xml
<CustomField>
    <fullName>I_Dont_Know_Text__c</fullName>
    <label>I Don&apos;t Know Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>