force-app/main/default/objects/Vidrala_Vidrala__c/fields/Manufacturing_Hygiene__c.field-meta.xml
<CustomField>
    <fullName>Manufacturing_Hygiene__c</fullName>
    <formula>NOT(ISBLANK(Manufacturing_Text__c))</formula>
    <label>Manufacturing &amp; Hygiene</label>
    <type>Checkbox</type>
</CustomField>