force-app/main/default/objects/Vidrala_Vidrala__c/fields/Manufacturing_Text__c.field-meta.xml
<CustomField>
    <fullName>Manufacturing_Text__c</fullName>
    <label>Manufacturing Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>