force-app/main/default/objects/Vidrala_Vidrala__c/fields/Microbiological_Water_Test__c.field-meta.xml
<CustomField>
    <fullName>Microbiological_Water_Test__c</fullName>
    <formula>NOT(ISBLANK(Water_Test_Text__c))</formula>
    <label>Microbiological Water Test</label>
    <type>Checkbox</type>
</CustomField>