force-app/main/default/objects/Vidrala_Vidrala__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Name of the customer</inlineHelpText>
    <label>Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Vidrala_Responses</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>