force-app/main/default/objects/Vidrala_Vidrala__c/fields/Other__c.field-meta.xml
<CustomField>
    <fullName>Other__c</fullName>
    <label>Other</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>