force-app/main/default/objects/Vidrala_Vidrala__c/fields/Pest_Control__c.field-meta.xml
<CustomField>
    <fullName>Pest_Control__c</fullName>
    <formula>NOT(ISBLANK(Pest_Control_Text__c))</formula>
    <label>Pest Control</label>
    <type>Checkbox</type>
</CustomField>