force-app/main/default/objects/Vidrala_Vidrala__c/fields/Pest_Control_Text__c.field-meta.xml
<CustomField>
    <fullName>Pest_Control_Text__c</fullName>
    <label>Pest Control Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>