force-app/main/default/objects/Vidrala_Vidrala__c/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <formula>NOT(ISBLANK(Price_Text__c))</formula>
    <label>Price</label>
    <type>Checkbox</type>
</CustomField>