force-app/main/default/objects/Vidrala_Vidrala__c/fields/Price_Text__c.field-meta.xml
<CustomField>
    <fullName>Price_Text__c</fullName>
    <label>Price Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>