force-app/main/default/objects/Vidrala_Vidrala__c/fields/Product_1__c.field-meta.xml
<CustomField>
    <fullName>Product_1__c</fullName>
    <label>Product</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>