force-app/main/default/objects/Vidrala_Vidrala__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Competitor 2 product</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>