force-app/main/default/objects/Vidrala_Vidrala__c/fields/Product_Wrapping_Quality__c.field-meta.xml
<CustomField>
    <fullName>Product_Wrapping_Quality__c</fullName>
    <formula>NOT(ISBLANK(Product_Wrapping_Quality_Text__c))</formula>
    <label>Product &amp; Wrapping Quality</label>
    <type>Checkbox</type>
</CustomField>