force-app/main/default/objects/Vidrala_Vidrala__c/fields/Product_Wrapping_Quality_Text__c.field-meta.xml
<CustomField>
    <fullName>Product_Wrapping_Quality_Text__c</fullName>
    <label>Product &amp; Wrapping Quality Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>