force-app/main/default/objects/Vidrala_Vidrala__c/fields/Reactivity__c.field-meta.xml
<CustomField>
    <fullName>Reactivity__c</fullName>
    <label>Reactivity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>