force-app/main/default/objects/Vidrala_Vidrala__c/fields/Received_Reply__c.field-meta.xml
<CustomField>
    <fullName>Received_Reply__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Received Reply</label>
    <type>Checkbox</type>
</CustomField>