force-app/main/default/objects/Vidrala_Vidrala__c/fields/Recommended_Supplier__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Supplier__c</fullName>
    <label>How Likely Would You Be To Recommend Us?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>