force-app/main/default/objects/Vidrala_Vidrala__c/fields/Response__c.field-meta.xml
<CustomField>
    <fullName>Response__c</fullName>
    <label>Response</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>