force-app/main/default/objects/Vidrala_Vidrala__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <inlineHelpText>Customers role in company</inlineHelpText>
    <label>Role</label>
    <type>TextArea</type>
</CustomField>