force-app/main/default/objects/Vidrala_Vidrala__c/fields/Select_One_Competitor__c.field-meta.xml
<CustomField>
    <fullName>Select_One_Competitor__c</fullName>
    <label>Competitor 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>