force-app/main/default/objects/Vidrala_Vidrala__c/fields/Sharp_Elements_Control__c.field-meta.xml
<CustomField>
    <fullName>Sharp_Elements_Control__c</fullName>
    <formula>NOT(ISBLANK(Sharps_Text__c))</formula>
    <label>Sharp Elements Control</label>
    <type>Checkbox</type>
</CustomField>