force-app/main/default/objects/Vidrala_Vidrala__c/fields/Sharps_Text__c.field-meta.xml
<CustomField>
    <fullName>Sharps_Text__c</fullName>
    <label>Sharps Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>