force-app/main/default/objects/Vidrala_Vidrala__c/fields/Stage_Date_UTC__c.field-meta.xml
<CustomField>
    <fullName>Stage_Date_UTC__c</fullName>
    <label>Stage Date (UTC)</label>
    <type>TextArea</type>
</CustomField>