force-app/main/default/objects/Vidrala_Vidrala__c/fields/Start_Date_UTC__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_UTC__c</fullName>
    <label>Start Date (UTC)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>