force-app/main/default/objects/Vidrala_Vidrala__c/fields/Stock_Levels__c.field-meta.xml
<CustomField>
    <fullName>Stock_Levels__c</fullName>
    <formula>NOT(ISBLANK(Stock_Levels_Text__c))</formula>
    <label>Stock Levels</label>
    <type>Checkbox</type>
</CustomField>