force-app/main/default/objects/Vidrala_Vidrala__c/fields/Stock_Levels_Text__c.field-meta.xml
<CustomField>
    <fullName>Stock_Levels_Text__c</fullName>
    <label>Stock Levels Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>