force-app/main/default/objects/Vidrala_Vidrala__c/fields/Submit_Date_UTC__c.field-meta.xml
<CustomField>
    <fullName>Submit_Date_UTC__c</fullName>
    <label>Submit Date (UTC)</label>
    <type>TextArea</type>
</CustomField>