force-app/main/default/objects/Vidrala_Vidrala__c/fields/Survey_Type__c.field-meta.xml
<CustomField>
    <fullName>Survey_Type__c</fullName>
    <label>Survey Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UK</fullName>
            </value>
            <value>
                <fullName>Italy</fullName>
            </value>
            <value>
                <fullName>Spain</fullName>
            </value>
            <value>
                <fullName>Beverages</fullName>
                <isActive>false</isActive>
                <label>Beverages</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>