force-app/main/default/objects/Vidrala_Vidrala__c/fields/Sustainability_Colaborator__c.field-meta.xml
<CustomField>
    <fullName>Sustainability_Colaborator__c</fullName>
    <label>Wants to collaborate on sustainability?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Yes</label>
            </value>
            <value>
                <fullName>0</fullName>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>