force-app/main/default/objects/Vidrala_Vidrala__c/fields/Sustainability_Influence__c.field-meta.xml
<CustomField>
    <fullName>Sustainability_Influence__c</fullName>
    <label>Sustainability Influence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>