force-app/main/default/objects/Vidrala_Vidrala__c/fields/Sustainability_Projects__c.field-meta.xml
<CustomField>
    <fullName>Sustainability_Projects__c</fullName>
    <label>Sustainability Projects to Collaborate</label>
    <type>TextArea</type>
</CustomField>