force-app/main/default/objects/Vidrala_Vidrala__c/fields/Sustainability_Suggestions__c.field-meta.xml
<CustomField>
    <fullName>Sustainability_Suggestions__c</fullName>
    <label>Sustainability Suggestions</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>