force-app/main/default/objects/Vidrala_Vidrala__c/fields/Technical_Knowledge__c.field-meta.xml
<CustomField>
    <fullName>Technical_Knowledge__c</fullName>
    <label>Technical Knowledge</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>