force-app/main/default/objects/Vidrala_Vidrala__c/fields/Traceability__c.field-meta.xml
<CustomField>
    <fullName>Traceability__c</fullName>
    <formula>NOT(ISBLANK(Traceability_Text__c))</formula>
    <label>Traceability</label>
    <type>Checkbox</type>
</CustomField>