force-app/main/default/objects/Vidrala_Vidrala__c/fields/Traceability_Text__c.field-meta.xml
<CustomField>
    <fullName>Traceability_Text__c</fullName>
    <label>Traceability Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>