force-app/main/default/objects/Vidrala_Vidrala__c/fields/Vidrala_Annual_Reports__c.field-meta.xml
<CustomField>
    <fullName>Vidrala_Annual_Reports__c</fullName>
    <label>Vidrala Annual Reports</label>
    <referenceTo>Vidrala_Customer_Survey_Annual_Reports__c</referenceTo>
    <relationshipName>Vidrala_Customer_Surveys</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>