force-app/main/default/objects/Vidrala_Vidrala__c/fields/Water_Test_Text__c.field-meta.xml
<CustomField>
    <fullName>Water_Test_Text__c</fullName>
    <label>Water Test Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>