force-app/main/default/objects/Vidrala_Vidrala__c/recordTypes/Survey_Year.recordType-meta.xml
<RecordType>
    <fullName>Survey_Year</fullName>
    <active>false</active>
    <label>Survey Year</label>
</RecordType>