force-app/main/default/objects/Vidrala_Vidrala__c/validationRules/Survey_Type_Match_With_Annual_Report.validationRule-meta.xml
<ValidationRule>
    <fullName>Survey_Type_Match_With_Annual_Report</fullName>
    <active>true</active>
    <description>Checks the survey type on the response record matches the linked annual report survey type</description>
    <errorConditionFormula>TEXT( Survey_Type__c ) &lt;&gt; 
TEXT( Vidrala_Annual_Reports__r.Survey_Type__c )</errorConditionFormula>
    <errorMessage>The Survey Type doesn&apos;t match the Annual Reports Type</errorMessage>
</ValidationRule>