force-app/main/default/objects/Vidrala_Vidrala__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Survey_Year__c</columns>
    <columns>Survey_Type__c</columns>
    <columns>Account__c</columns>
    <columns>Name__c</columns>
    <columns>Account_Manager__c</columns>
    <columns>Survey_Sent__c</columns>
    <columns>Received_Reply__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>