force-app/main/default/objects/Vidrala_Vidrala__c/listViews/Italy_2023.listView-meta.xml
<ListView>
    <fullName>Italy_2023</fullName>
    <columns>NAME</columns>
    <columns>Survey_Year__c</columns>
    <columns>Survey_Type__c</columns>
    <columns>Account__c</columns>
    <columns>Name__c</columns>
    <columns>Account_Manager__c</columns>
    <columns>Survey_Sent__c</columns>
    <columns>Received_Reply__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Survey_Year__c</field>
        <operation>equals</operation>
        <value>2023</value>
    </filters>
    <filters>
        <field>Survey_Type__c</field>
        <operation>equals</operation>
        <value>Italy</value>
    </filters>
    <label>Italy 2023</label>
</ListView>