force-app/main/default/objects/Vidrala_Vidrala__c/listViews/UK_2021.listView-meta.xml
<ListView>
    <fullName>UK_2021</fullName>
    <columns>NAME</columns>
    <columns>Survey_Year__c</columns>
    <columns>Survey_Type__c</columns>
    <columns>Account__c</columns>
    <columns>Name__c</columns>
    <columns>Account_Manager__c</columns>
    <columns>Survey_Sent__c</columns>
    <columns>Received_Reply__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Survey_Year__c</field>
        <operation>equals</operation>
        <value>2021</value>
    </filters>
    <filters>
        <field>Survey_Type__c</field>
        <operation>equals</operation>
        <value>UK</value>
    </filters>
    <label>UK 2021</label>
</ListView>