force-app/main/default/objects/Vidrala_Vidrala__c/listViews/UK_2022.listView-meta.xml
<ListView>
    <fullName>UK_2022</fullName>
    <columns>NAME</columns>
    <columns>Survey_Year__c</columns>
    <columns>Survey_Type__c</columns>
    <columns>Account__c</columns>
    <columns>Name__c</columns>
    <columns>Account_Manager__c</columns>
    <columns>Survey_Sent__c</columns>
    <columns>Received_Reply__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Survey_Year__c</field>
        <operation>equals</operation>
        <value>2022</value>
    </filters>
    <filters>
        <field>Survey_Type__c</field>
        <operation>equals</operation>
        <value>UK</value>
    </filters>
    <label>UK 2022</label>
</ListView>