force-app/main/default/objects/Vidrala_Vidrala__c/listViews/X2015.listView-meta.xml
<ListView>
    <fullName>X2015</fullName>
    <columns>NAME</columns>
    <columns>Survey_Year__c</columns>
    <columns>Survey_Type__c</columns>
    <columns>Account__c</columns>
    <columns>Name__c</columns>
    <columns>Account_Manager__c</columns>
    <columns>Survey_Sent__c</columns>
    <columns>Received_Reply__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Survey_Year__c</field>
        <operation>equals</operation>
        <value>2015</value>
    </filters>
    <label>2015</label>
</ListView>